# hedron

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  data.txt
src/: lib.rs
src/algos/: earcut.rs  intersection.rs  marching_cubes.rs  mod.rs  octopolate.rs
src/bevy/: alias.rs  arc_ball.rs  bevy_mesh_conversions.rs  billboard_text.rs  ecs_helpers.rs  face_material.rs  geo_renderer.rs  helpers.rs  local_plugin.rs  mod.rs
src/controls/: mod.rs
src/core/: geometry.rs  mod.rs  plane.rs  point-transformable.rs  point_based.rs  pose.rs
src/data/: grid.rs  grid2.rs  grid_pos.rs  grid_tri.rs  mod.rs  pool.rs
src/kernel/: mod.rs
src/lines/: bezier.rs  curve.rs  line.rs  line_list.rs  line_strip.rs  mod.rs  polyline.rs  ray.rs
src/math/: cons.rs  mod.rs  organic.rs  polynomial.rs  quick.rs  range1.rs  range2.rs  range3.rs  second_order.rs  shapers.rs  stat.rs  stats.rs  vector.rs
src/planar/: circle.rs  ellipse.rs  mod.rs  polygon.rs  rectangle.rs  triangle.rs
src/pts/: mod.rs  points.rs  vectors.rs
src/raster/: mod.rs  raster_circle.rs  raster_line.rs
src/render/: bevy_helpers.rs  bevy_mesh_conversions.rs  bevy_mesh_helpers.rs  face_material.rs  geo_renderer.rs  hedron_material_plugin.rs  instance_material.rs  line_material.rs  mod.rs  renderable.rs  rig.rs
src/smoothing/: dropoff.rs  mod.rs  smooth.rs  smoothable.rs
src/solid/: cuboid.rs  hedron.rs  mesh.rs  mesh_consts.rs  mod.rs  octoid.rs  polyhedron.rs  sphere.rs  tri_mesh.rs
src/srf/: bisurface.rs  mod.rs  rectangle3.rs  trisurface.rs
src/util/: dir.rs  iter.rs  misc.rs  mod.rs  named_enum.rs  one_or_many.rs  rot.rs  set.rs  side.rs  simple_step_range.rs  vecs.rs
src/various/: mod.rs  polygon_terrain.rs  shape.rs  sketchbook.rs
