[package]
name = "hedron"
version = "0.2.0"
edition = "2021"
rust-version = "1.66.0"
authors = ["Jos Feenstra <me@josfeenstra.nl>"]
description = "An all-in-one 3D modelling library"
repository = "https://github.com/josfeenstra/hedron"
license = "MIT"
readme = "README.md"
keywords = [
    "3d",
    "mesh",
    "half-edge",
    "spline",
    "brep",
]
categories = [
    "game-engines",
    "computer-graphics",
    "3d-modelling",
]

[dependencies]
glam = "0.22.0"
bytemuck = "1.12.3"
serde = "1.0.143"
rand = "0.8.5"
colored = "2.0"
num-traits = "0.2.15"
lazy_static = "1.4.0"
anyhow = "1.0.68"

# optionals
bevy = { version = "0.9.0", optional = true } 
bevy-inspector-egui = { version = "0.14.0", optional = true }
nalgebra = { version = "0.31.4", features = ["glam022"], optional = true }

[features]
default = []
f32 = []
nalgebra = ["dep:nalgebra"]
bevy = ["dep:bevy", "dep:bevy-inspector-egui", "f32"]