[package]
name = "hedron"
version = "0.3.0"
edition = "2021"
rust-version = "1.66.0"
authors = ["Jos Feenstra <me@josfeenstra.nl>"]
description = "An all-in-one 3D modelling library"
repository = "https://github.com/josfeenstra/hedron"
license = "MIT"
readme = "README.md"
keywords = [
    "3d",
    "mesh",
    "half-edge",
    "spline",
    "brep",
]
categories = [
    "game-development",
    "game-engines",
    "graphics",
]

[dependencies]
bevy_math = "0.10.1"
# glam = {version = "0.23.0", features = ["rand"] }
bytemuck = "1.12.3"
serde = "1.0.143"
rand = "0.8.5"
rand_seeder = "0.2.3"
colored = "2.0"
num-traits = "0.2.15"
lazy_static = "1.4.0"
anyhow = "1.0.68"

# optionals
bevy = { version = "0.10.1", optional = true } 
bevy-inspector-egui = { version = "0.18.1", optional = true }
nalgebra = { version = "0.32.2", features = ["glam022"], optional = true }

# NOTE: these should also be optional
rand_pcg = "0.3.1"
dynstack = "0.4.0"

[features]
default = []
f32 = []
nalgebra = ["dep:nalgebra"]
bevy = ["dep:bevy", "dep:bevy-inspector-egui", "f32"]
